增加一键安装

--- a/install/data/account.conf
+++ b/install/data/account.conf
@@ -1,6 +1,14 @@
 [token]
-token = 123456
+token = %s
 
 [admin_account]
-username = root
-password = root
+username = %s
+password = %s
+
+
+[mysql]
+db_host = %s
+db_port = %s
+db_name = %s
+db_username = %s
+db_password = %s
