--- a/docker/static/Dockerfile
+++ b/docker/static/Dockerfile
@@ -1,9 +1,9 @@
-FROM ubuntu:14.04
+FROM centos:6
 
 MAINTAINER yubang
 
 ADD install.sh /tmp/install.sh
-ADD default /tmp/default
+ADD nginx.conf /tmp/nginx.conf
 ADD start.sh /tmp/start.sh
 RUN /bin/bash /tmp/install.sh
 
