--- a/docker/php7/Dockerfile
+++ b/docker/php7/Dockerfile
@@ -2,6 +2,9 @@ FROM centos:6
 
 MAINTAINER yubang
 
+RUN yum groupinstall "Development tools" -y
+RUN yum install wget tar -y
+
 ADD install.sh /tmp/install.sh
 ADD start.sh /tmp/start.sh
 RUN /bin/bash /tmp/install.sh
