--- a/docker/python3/Dockerfile
+++ b/docker/python3/Dockerfile
@@ -2,6 +2,8 @@ FROM centos:6
 
 MAINTAINER yubang
 
+RUN yum groupinstall "Development tools" -y
+RUN yum install wget tar -y
 ADD install.sh /tmp/install.sh
 ADD nginx.conf /tmp/nginx.conf
 ADD start.sh /tmp/start.sh
