--- a/config.json
+++ b/config.json
@@ -7,5 +7,11 @@
   "apiServer":{
     "ip": "127.0.0.1",
     "port": 9000
+  },
+  "redis":{
+    "host": "127.0.0.1",
+    "port": 6379,
+    "db": 0,
+    "password": ""
   }
 }
