完成镜像构建功能

--- a/config.json
+++ b/config.json
@@ -19,5 +19,7 @@
   "Admin":{
     "Username": "root",
     "Password": "root"
-  }
+  },
+  "ImageUrl": "127.0.0.1:5000",
+  "ProxyAddr": "0.0.0.0:10000"
 }
