--- a/config.json
+++ b/config.json
@@ -12,8 +12,11 @@
   "Image":{
     "static": "paas_base_static_v1",
     "python2.7": "paas_base_python27_v1",
+    "python3.5": "paas_base_python35_v1",
     "php7": "paas_base_php7_v1",
     "golang": "paas_base_golang_v1",
+    "java8": "paas_base_java8_v1",
+    "python2-work": "paas_base_python27_work_v1",
     "nodejs": "paas_base_nodejs_v1"
   },
   "Admin":{
