--- a/config.json
+++ b/config.json
@@ -10,17 +10,18 @@
     "Port": 8000
   },
   "Image":{
-    "static": "paas_base_static_v1",
-    "python2.7": "paas_base_python27_v1",
-    "python3.5": "paas_base_python35_v1",
-    "php7": "paas_base_php7_v1",
-    "golang": "paas_base_golang_v1",
-    "java8": "paas_base_java8_v1",
-    "python2-work": "paas_base_python27_work_v1",
-    "nodejs": "paas_base_nodejs_v1",
-    "ruby": "paas_base_ruby_v1",
-    "applet-static": "paas_base_applet_static_v1"
+    "static": "registry.alauda.cn/yubang/paas_base_static",
+    "python2.7": "registry.alauda.cn/yubang/paas_base_python2",
+    "python3.5": "registry.alauda.cn/yubang/paas_base_python3",
+    "php7": "registry.alauda.cn/yubang/paas_base_php",
+    "golang": "registry.alauda.cn/yubang/paas_base_golang",
+    "java8": "registry.alauda.cn/yubang/paas_base_java",
+    "python2-work": "registry.alauda.cn/yubang/paas_base_python2_worker",
+    "nodejs": "registry.alauda.cn/yubang/paas_base_nodejs",
+    "ruby": "registry.alauda.cn/yubang/paas_base_ruby",
+    "applet-static": "registry.alauda.cn/yubang/paas_base_applet_static"
   },
+  "TestImage": "registry.alauda.cn/yubang/paas_base_test",
   "Admin":{
     "Username": "root",
     "Password": "root"
